[package]
name = "rebar"
version = "0.1.0"
edition = "2024"
description = "A wallpaper-aware Windows top taskbar replacement built with iced."
readme = "README.md"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
iced_plot = "0.3"
image = { version = "0.25", default-features = true, features = ["png", "jpeg", "bmp"] }
lucide-icons = { version = "0.575", features = ["iced"] }
raw-window-handle = "0.6"
sysinfo = "0.30"
windows = { version = "0.58", features = [
    "Foundation",
    "Media_Control",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_NetworkManagement_WiFi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_System_Shutdown",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
] }
windows-future = "0.2"

[build-dependencies]
winresource = "0.1"

[patch.crates-io]
iced_plot = { path = "vendor/iced_plot" }
